tests/baselines/reference/for-of46.errors.txt
for-of46.ts(3,7): error TS2322: Type 'boolean' is not assignable to type 'string'.
for-of46.ts(3,18): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== for-of46.ts (2 errors) ====
    var k: string, v: boolean;
    var map = new Map([["", true]]);
    for ([k = false, v = ""] of map) {
          ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
                     ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
        k;
        v;
    }